--- a/lawwa-web-revised/courses.html
+++ b/lawwa-web-revised/courses.html
@@ -106,7 +106,7 @@
     <!-- Header End -->
 
     <!-- Portfolio Hero Section Begin -->
-    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+    <!-- <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -117,7 +117,7 @@
             </div>
         </div>
     </section>
-    <br><br>
+    <br><br> -->
     <!-- Portfolio Hero Section End -->
 
         <!-- Cta Section Begin -->
@@ -133,13 +133,31 @@
         </section> -->
         <!-- Cta Section End -->
 
+  <section class="cta-section spad set-bg w-100" data-setbg="img/lawwa-img/facial-alt.jpg" 
+    style="display: flex; height: 100%; max-height: 550px; margin-left: auto; margin-right: auto;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="cta-text">
+                            <h2>Courses</h2>
+                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore<br /> magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                                viverra maecenas.</p>
+                            <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="cust-lawwa-gradient">Join Today</a> -->
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </section>
+
+        <br>
     <section class="about section">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 col-sm-12">
                     <div class="block">
                         <div class="section-title">
-                            <h2>Basic Courses</h2>
+                            <h3>Basic Courses</h3>
                             <p>random text</p>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
@@ -147,7 +165,7 @@
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
                     <div class="block">
-                        <img src="img/lawwa-img/DSC08056.jpg" alt="Img">
+                        <img src="img/lawwa-img/massage-alt.jpg" alt="Img">
                     </div>
                 </div><!-- .col-md-5 close -->
             </div>
@@ -176,7 +194,7 @@
             <div class="row">
                 <div class="col-md-5 col-sm-12">
                     <div class="block">
-                        <img src="img/lawwa-img/DSC08050.jpg" alt="Img">
+                        <img src="img/lawwa-img/treatment-alt.jpg" alt="Img">
                     </div>
                 </div>
 
@@ -189,7 +207,7 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="block">
                         <div class="section-title">
-                            <h2>Extended Courses</h2>
+                            <h3>Extended Courses</h3>
                         </div>
                         <p>Extended course outline </p>
                     </div>
@@ -206,7 +224,7 @@
               <div class="col-md-7 col-sm-12">
                   <div class="block">
                       <div class="section-title">
-                          <h2>Other Courses</h2>
+                          <h3>Other Courses</h3>
                           <p>random text</p>
                       </div>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
@@ -214,7 +232,7 @@
               </div><!-- .col-md-7 close -->
               <div class="col-md-5 col-sm-12">
                   <div class="block">
-                      <img src="img/lawwa-img/sop-poster-01.jpg" alt="Img">
+                      <img src="img/lawwa-img/makeup-alt.jpg" alt="Img">
                   </div>
               </div><!-- .col-md-5 close -->
           </div>
