--- a/lawwa-web-revised/events.html
+++ b/lawwa-web-revised/events.html
@@ -105,9 +105,8 @@
     </header>
     <!-- Header End -->
     
-    
-    <br><br>
-
+    <div class="alt-blog-hero set-bg" data-setbg="img/blog/details/blog-hero.jpg" ></div>
+    <br>
     <!-- Blog Section Begin -->
     <section class="blog-section spad">
         <div class="container">
@@ -118,8 +117,8 @@
                             <img src="img/blog/blog-1.jpg" alt="">
                         </div> -->
                         <div class="bi-text">
-                            <div class="label">event type</div>
-                            <h5><a href="./blog-details.html">Event Title</a>
+                            <div class="label">Article Type eg Beauty Tip</div>
+                            <h5><a href="./blog-details.html">Aritcle Title</a>
                             </h5>
                             <ul>
                                 <li>by <span>Admin</span></li>
@@ -135,8 +134,8 @@
                             <img src="img/blog/blog-2.jpg" alt="">
                         </div> -->
                         <div class="bi-text">
-                            <div class="label">event type</div>
-                            <h5><a href="./blog-details.html">Event Title</a>
+                          <div class="label">Article Type eg Lawwa Event</div>
+                          <h5><a href="./blog-details.html">Aritcle Title</a>
                             </h5>
                             <ul>
                                 <li>by <span>Admin</span></li>
