--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -60,7 +60,7 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Products & Services</a></li>
+                <li class="active"><a href="./services.html">Products & Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
                 <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
                     <ul class="dropdown">
@@ -69,7 +69,7 @@
                         <li><a href="./courses.html">Courses</a></li>
                     </ul>
                 </li>
-                <li class="active"><a href="./profile.html">Profile</a>
+                <li><a href="./profile.html">Profile</a>
                     <ul class="dropdown">
                         <li><a href="./profile.html">Profile</a></li>
                         <li><a href="./contact.html">Contact Us</a></li>
