--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -105,7 +105,7 @@
     </header>
     <!-- Header End -->
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  data-interval="3000">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> 1 </li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -117,12 +117,12 @@
             <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6">
                     <div class="custom-social">
-                        <a href="#">
+                        <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/facebook logo.png" />
                           </div>
                         </a>
-                        <a href="#">
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
@@ -151,12 +151,12 @@
             <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6">
                     <div class="custom-social">
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/facebook logo.png" />
                           </div>
                         </a>
-                        <a href="#">
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
@@ -185,13 +185,13 @@
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/facebook logo.png" />
                           </div>
                         </a>
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
                         </a>
@@ -215,14 +215,14 @@
               </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
-        </a>
+        </a> -->
       </div>
 
       <br>
