--- a/lawwa-web-revised/blog-details.html
+++ b/lawwa-web-revised/blog-details.html
@@ -176,10 +176,10 @@
                             </div>
                             <div class="share">
                                 <span>Share</span>
-                                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                                <a href="#" class="youtube"><i class="fa fa-youtube-play"></i></a>
-                                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/lawwa.asia/" class="facebook"><i class="fa fa-facebook"></i></a>
+                                <!-- <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                                <a href="#" class="youtube"><i class="fa fa-youtube-play"></i></a> -->
+                                <a href="https://www.instagram.com/lawwa.asia/?hl=en" class="instagram"><i class="fa fa-instagram"></i></a>
                             </div>
                         </div>
                         <!-- <div class="bd-related-post">
