--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -105,11 +105,13 @@
     </header> 
     <!-- Header End -->
 
-    <section class="contact-section spad" style="padding-top: 30px !important;">
+    <br>
+
+    <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
-                    <div class="contact-text" >
+                <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                    <div class="contact-text">
                         <h3>Get in touch</h3>
                         <br>
                         <div class="ct-item">
@@ -160,44 +162,42 @@
                             </div>
                             <div class="ct-text">
                                 <h5>Email</h5>
-                                <a href="mailto:someone@example.com"><p>@lawwa.asia</p></a>
+                                <a href="mailto:someone@lawwa.asia"><p>@lawwa.asia</p></a>
                               </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8 col-md-8">
-                    <!-- <div class="contact-form">
-                        <form action="#">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
-                            <textarea placeholder="Message"></textarea>
-                            <button type="submit" class="site-btn" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));">Submit</button>
-                        </form>
-                    </div> -->
+                <div class="col-12 col-xl-8 col-lg-8 col-md- col-sm-3">
 
-                    <section class="ad-banner">
-                      <div class="container">
-                          <div class="row">
-                              <div class="col-lg-12" >
-                                  <div class="ph-text set-bg" data-setbg="img/lawwa-img/festivebanner04.jpeg">
-                                      <h2>Join Today For Full Access To Our Services</h2>
-                                      <p>
-                                        <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
-                                        class="cust-lawwa-gradient">
-                                        JOIN NOW
-                                      </a>
-                                      </p>
-                                      
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </section>
-
+                  <section class="ad-banner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12" >
+                                <div class="ph-text set-bg" data-setbg="img/lawwa-img/festivebanner04.jpeg">
+                                    <h2>Join Today For Full Access To Our Services</h2>
+                                    <p>
+                                      <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
+                                      class="cust-lawwa-gradient">
+                                      JOIN NOW
+                                    </a>
+                                    </p>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+  
+              </div>
+            </div>
+            <!-- <div class="row">
+              <div class="col-8 col-xl-8 col-lg-8 col-md-3 col-sm-3">
+                <div class="contact-banner">
+                  <img src="img/lawwa-img/massage.jpg">
                 </div>
 
             </div>
+            </div> -->
         </div>
     </section>
 
