--- a/lawwa-web-revised/recruitment.html
+++ b/lawwa-web-revised/recruitment.html
@@ -132,7 +132,7 @@
                 <div class="col-lg-6 p-0">
                     <div class="about-text">
                         <div class="section-title">
-                            <h2>Join Malaysia's Fast Growing Beauty Solution</h2>
+                            <h2 class="gradient-text">Join Malaysia's Fast Growing Beauty Solution</h2>
                             <p>Our Personal Beauty Therapists (PBT) Are Thoroughly Trained Specialist In What They Do. 
                             </p>
                             <p>
