--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -140,7 +140,8 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="section-title pricing-title" style="margin-bottom: 15px !important; padding-bottom: 20px !important;">
-                    <h3 class="gradient-text">Services & Related Products</h3>
+                    <!-- <h3 class="gradient-text">Services & Related Products</h3> -->
+                    <h3 class="gradient-text">Products & Services</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
                             incididunt ut labore et dolore.</span>
                     </div>
