--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/venobox.css" >
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
 
@@ -93,10 +94,10 @@
               </small>
             </div>
           </div>
-          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
+          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
               <button class="cust-lawwa-ad-btn btn-block">
-                <span>Register</span>
+                <span style="color: #FFF;">Register</span>
               </button>
             </a>
         </div>
@@ -401,6 +402,9 @@
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="fs-widget d-none d-md-block">
+              <div class="counterDisplay d-none">
+                Vistor counter
+              </div>
               <h5>Quick links</h5>
               <ul>
                 <li><a href="#">Home</a></li>
@@ -477,6 +481,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/counter.js"></script>
     <script src="js/lawwa.js"></script>
     <script src="js/main.js"></script>
   </body>
