--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -99,7 +99,7 @@
           <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
               <button class="cust-lawwa-ad-btn btn-block">
-                <span>Register</span>
+                <span style="color: #FFF;">Register</span>
               </button>
             </a>
         </div>
