--- a/lawwa-web-revised/academy.html
+++ b/lawwa-web-revised/academy.html
@@ -96,7 +96,7 @@
           <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
               <button class="cust-lawwa-ad-btn btn-block">
-                <span>Register</span>
+                <span style="color: #FFF;">Register</span>
               </button>
             </a>
         </div>
@@ -124,9 +124,10 @@
     <section>
       <div class="container-fluid">
         <div class="col-lg-12 p-0">
-          <div class="col-lg-6 col-10 col-md-6 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
-            <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
+          <div class="col-lg-6 col-10 col-md-6 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg" >
+            <a href="https://www.youtube.com/watch?v=6mmIPuGl5hM" target="_blank" class="play-btn video-popup" data-vbtype="video" data-autoplay="true">
               <i class="fa fa-play"></i>
+              <!-- <iframe src="https://www.youtube.com/watch?v=6mmIPuGl5hM"></iframe> -->
             </a>
           </div>
         </div>
