--- a/lawwa-web-revised/academy.html
+++ b/lawwa-web-revised/academy.html
@@ -172,7 +172,7 @@
           <div class="col-lg-12">
               <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                   <h3>Lawwa Academy</h3>
-                  <span> description </span>
+                  <span> The Lawwa.Asia Beauty Digitalisation Academy (LABDA), brings transforms our chosen students into expert beauty therapist here at Lawwwa.Asia. With our select courses and carefully refined cirrculum/syllabus we provide you with the theoretical and practical knowldege needed to be a professional beautician here at Lawwa.Asia. </span>
               </div>
           </div>
         </div>
@@ -184,50 +184,44 @@
                           <div class="so-number">01</div>
                           <h5>Fine-Tuned Curriculum </h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Our Experts Have Designed And Refined A Syllabus For All Our Academy Students That Raises Expert From Even Inexperienced Candidates</p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
                           <div class="so-number">02</div>
                           <h5>Expert Instructions</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Trained And Retrained. Our Instructors Are Highyl Qualified Professionals And Experts In Their Field, And Sicnerely Dedicated To Sharing Their Skills And Knwoeldge</p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
                           <div class="so-number">03</div>
-                          <h5>Practicial Training</h5>
+                          <h5>Beauty Theory/Concepts</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Ready To Learn? Our Classroom Seessions Give Even Those With No Background Better Understand Of The Underlying Concepts That Make Up - Beauty, Wellbeing And The Lawwa.Asia Lifestyle</p>
                   </div>
               </div>
               <div class="col-lg-6">
                   <div class="so-item">
                       <div class="so-title">
                           <div class="so-number">04</div>
-                          <h5>Beauty Theory/Concepts</h5>
+                          <h5>Practicial Training</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Building On The Basics, Our Candidates Are Passionately Trained To Uphold The Lawwa.Asia Status With Skills That Prove They Experts In The Beauty Industry</p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
-                          <div class="so-number">02</div>
+                          <div class="so-number">05</div>
                           <h5>Malaysia wide service</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Our Country Wide Reach Allow Us To Develop Talents From Far And Wide. Rooted In The Southern Malaysian Regions Lawwa.Asia Continues To Conquer The Country And Beyond. </p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
-                          <div class="so-number">03</div>
+                          <div class="so-number">06</div>
                           <h5>Help Us Fight Covid</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Come Fight The Good Fight. As Our Esteemed Academy Students And Future PBT, You Are Part Of A Much Larger Solution Towards The Global Pandemic</p>
                   </div>
               </div>
           </div>
