--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -113,13 +113,14 @@
                 <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="contact-text">
                         <h3>Get in touch</h3>
+                        <p>For Any Inquiries;</p>
                         <br>
                         <div class="ct-item">
                             <div class="ct-icon">
                               <i class="fa fa-map-marker"></i>
                           </div>
                             <div class="ct-text"> 
-                                <h5>Address</h5>
+                                <h5>Visit Our Office:</h5>
                                 <!-- <a href="https://www.google.com.my/maps/place/LAWWA.ASIA/@2.7179612,101.9230929,17z/data=!3m1!4b1!4m5!3m4!1s0x31cde7207e78f4b3:0xae4f6ff8fa1d6555!8m2!3d2.7179612!4d101.9252816" target="_blank">
                                   <div class="" style="max-width: 40px; max-height: 40px;">
                                     <img src="img/lawwa-img/map-icon.jpg" />
@@ -147,7 +148,7 @@
                                 <i class="fa fa-mobile"></i>
                             </div>
                             <div class="ct-text">
-                                <h5>Phone</h5>  
+                                <h5>Give Us A Call:</h5>  
                                 <ul>
                                     <li>+60 12 700 0107</li>
                                     <!-- <li>number 2</li> -->
@@ -161,7 +162,7 @@
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="ct-text">
-                                <h5>Email</h5>
+                                <h5>Send Us An Email:</h5>
                                 <a href="mailto:someone@lawwa.asia"><p>@lawwa.asia</p></a>
                               </div>
                         </div>
