--- a/lawwa-web-revised/events.html
+++ b/lawwa-web-revised/events.html
@@ -134,16 +134,14 @@
                             <img src="img/blog/blog-2.jpg" alt="">
                         </div> -->
                         <div class="bi-text">
-                          <div class="label">Article Type eg Lawwa Event</div>
-                          <h5><a href="./blog-details.html">Aritcle Title</a>
+                          <div class="label">Health Tip</div>
+                          <h5><a href="./tips.html">Healthy Ways Getting a Massage Benefits Your Entire Body</a>
                             </h5>
                             <ul>
                                 <li>by <span>Admin</span></li>
-                                <li>Apr,15, 2021</li>
+                                <li>04/03/2021</li>
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas accumsan lacus vel facilisis. </p>
+                            <p>Explore the numerous health benifits of massages for men and women alike.</p>
                         </div>
                     </div>
                 </div>
