--- a/lawwa-web-revised/recruitment.html
+++ b/lawwa-web-revised/recruitment.html
@@ -120,6 +120,7 @@
     </div> -->
     <!-- Breadcrumb End -->
 
+    <br>
     <!-- About Section Begin -->
     <section class="about-section">
         <div class="container-fluid">
@@ -133,7 +134,7 @@
                     <div class="about-text">
                         <div class="section-title">
                             <h2 class="gradient-text">Join Malaysia's Fast Growing Beauty Solution</h2>
-                            <p>Our Personal Beauty Therapists (PBT) Are Thoroughly Trained Specialist In What They Do. 
+                            <p>Our Personal Beauty Therapists (PBT) Are Thoroughly Trained Specialists In What They Do. 
                             </p>
                             <p>
                                 Heres Just A Few Reasons Joining Our Academy Is Right For You!
@@ -166,8 +167,8 @@
                                     <img src="img/about/list-3.png" alt="">
                                 </div>
                                 <div class="al-text">
-                                    <h5>Flexible Schedule</h5>
-                                    <p> description </p>
+                                    <h5>Booking Application</h5>
+                                    <p>Our PBT Have Access To Our Innovate Booking Application That Allows Them To Easily Manage Their Service Apppointments At The Click Of A Button </p>
                                 </div>
                             </div>
                             <div class="al-item">
@@ -177,7 +178,7 @@
                                 <div class="al-text">
                                     <h5>Weekly Payment Scheme</h5>
                                     <p>
-                                        description
+                                        Our Payout Scheme Allows You To Have Your Earnings Sent Out On A Bi-Weekly Period
                                     </p>
                                 </div>
                             </div>
@@ -249,11 +250,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="cta-text">
-                        <h2>Ready To Join?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore<br /> magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas.</p>
-                        <a href="#" class="cust-lawwa-gradient">Contact us</a>
+                        <h2>Be Part Of The Lawwa.Asia family Now</h2>
+                        <p>Intertested In Building A Career With Us?
+                          <br /> Come Join Our Evergrowing Team And Get Started Right Away!</p>
+                        <a href="#" class="cust-lawwa-gradient">JOIN Today!</a>
                     </div>
                 </div>
             </div>
