--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -142,8 +142,11 @@
                   <div class="section-title pricing-title" style="margin-bottom: 15px !important; padding-bottom: 20px !important;">
                     <!-- <h3 class="gradient-text">Services & Related Products</h3> -->
                     <h3 class="gradient-text">Products & Services</h3>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
-                            incididunt ut labore et dolore.</span>
+                        <p>
+                          Immerse in our service that certainly bring relaxation and comfort to you. 
+                          Our various service will cope in every desire you had. 
+                          We will deliver our Professional Beauty Therapist to pamper you.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -156,7 +159,7 @@
                         <div class="bi-text">
                             <h5><a href="./facial.html">Facial</a>
                             </h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur </p>
+                            <p>Facial is a basic skin treatment that cleanses pores, exfoliates dead skin and treats common skin condition with a custom mask. The service we provide will guaranteed to rejuvenate and nourish your faces, making your skin healthier and look younger. </p>
                         </div>
                     </div>
                     <div class="blog-item">
@@ -166,9 +169,7 @@
                       <div class="bi-text">
                           <h5><a href="./facial.html">Make Up</a>
                           </h5>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                              ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                              viverra maecenas accumsan lacus vel facilisis. </p>
+                          <p>Build your confidence on, be #Lawwa be you. We have every “look” on every occasion. Be it for wedding , interview and performance, we have it all ! </p>
                       </div>
                   </div>
                   <div class="blog-item">
@@ -176,11 +177,9 @@
                       <img src="img/lawwa-img/massage-alt.jpg" alt="">
                     </div>
                     <div class="bi-text">
-                        <h5><a href="./facial.html">Massage</a>
+                        <h5><a href="./massage.html">Massage</a>
                         </h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis. </p>
+                        <p>Massage is the stroking, kneading, warming, rolling and pressing of skin and muscles. There are lots of different kinds of massage, each with broadly different origins and aims - some focus on soothing muscle pain; others on increasing energy levels; some aim to improve a specific physical condition; others simply to help you relax. </p>
                     </div>
                 </div>
                 <div class="blog-item">
@@ -190,9 +189,7 @@
                   <div class="bi-text">
                       <h5><a href="./facial.html">Confinement Care</a>
                       </h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                          viverra maecenas accumsan lacus vel facilisis. </p>
+                      <p>A traditional practice following childbirth. Those who follow these customs typically begin immediately after the birth, and the seclusion or special treatment lasts for a culturally variable length: typically for one month or 30 days, up to 40 days, two months or 100 days.</p>
                   </div>
               </div>
               <div class="blog-item">
@@ -202,9 +199,9 @@
                 <div class="bi-text">
                     <h5 style="color: rgba(42,56,143,1) !important;"><a href="./facial.html">Treatment</a>
                     </h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                        viverra maecenas accumsan lacus vel facilisis. </p>
+                    <p>
+                      Pamper yourself with our signature full-body treatment with various techniques, that improve blood circulation, skin appearance, and boost your body conditions.
+                    </p>
                 </div>
             </div>
             <div class="blog-item">
@@ -214,9 +211,9 @@
               <div class="bi-text">
                   <h5><a href="./facial.html">Add-ons</a>
                   </h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                      ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                      viverra maecenas accumsan lacus vel facilisis. </p>
+                  <p>
+                    Enjoy our mani-pedi session. We also offered waxing, henna drawing and many more. Browse for more info !
+                  </p>
               </div>
           </div>
                 </div>
