--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -122,14 +122,9 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
-                    <h3>Facial Services</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
-                            incididunt ut labore et dolore.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
-                                incididunt ut labore et dolore.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
-                                incididunt ut labore et dolore.
-                            </p>
+                    <h3 class="gradient-text">Facial Services</h3>
+                        <p>A basic facial is a skin treatment that cleanses pores, exfoliates away dead skin cells, and treats common skin concerns with a custom mask. It is a popular spa treatment to pamper and relax. We got you covered ! </p>
+                            <p>Try one of our facial services now !</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +132,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3>Facial Type 1</h3>
+                        <h3 class="lawwa-blue-text">Facial Type 1</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
@@ -145,7 +140,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3>Facial Type 2</h3>
+                        <h3 class="lawwa-blue-text">Facial Type 2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
@@ -153,7 +148,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3>Facial Type 3</h3>
+                        <h3 class="lawwa-blue-text">Facial Type 3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
@@ -169,7 +164,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
-                        <h2>Related Products</h2>
+                        <h2 class="gradient-text">Related Products</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
                             incididunt ut labore et dolore.</p>
                     </div>
