--- a/lawwa-web-revised/gallery.html
+++ b/lawwa-web-revised/gallery.html
@@ -104,7 +104,7 @@
       </div>
     </header>
     <!-- Header End -->
-
+<br>
     <!-- Gallery Section Begin -->
     <div class="gallery-section spad">
         <div class="container">
@@ -112,12 +112,12 @@
                 <div class="col-lg-12">
                     <div class="filter-controls">
                         <ul>
-                            <li class="active" data-filter="*">All</li>
-                            <li data-filter=".fashion">Fashion</li>
-                            <li data-filter=".lifestyle">Lifestyle</li>
-                            <li data-filter=".natural">Natural</li>
-                            <li data-filter=".wedding">Wedding</li>
-                            <li data-filter=".videos">Videos</li>
+                            <li class="active" data-filter="*">LAWWA.ASIA</li>
+                            <!-- <li data-filter=".fashion"></li> -->
+                            <li data-filter=".lifestyle">STT</li>
+                            <li data-filter=".natural">KLAUKBNB</li>
+                            <li data-filter=".wedding">ACADEMY</li>
+                            <!-- <li data-filter=".videos" aria-disabled="true">Videos</li> -->
                         </ul>
                     </div>
                 </div>
@@ -127,8 +127,9 @@
             <div class="row">
                 <div class="col-lg-12 p-0">
                     <div class="gallery-filter">
-                        <a href="img/gallery/gallery-1.jpg" class="gf-icon image-popup">
-                            <div class="gf-item set-bg fashion" data-setbg="img/gallery/gallery-1.jpg">
+                        <a href="img/lawwa-img/web-gallery/DIN22439.JPG" class="gf-icon image-popup">
+                            <!-- <div class="gf-item set-bg fashion" data-setbg="img/gallery/gallery-1.jpg"> -->
+                              <div class="gf-item large-small-height set-bg natural" data-setbg="img/lawwa-img/web-gallery/DIN22439.JPG">
                             <span class="icon_plus"></span>
                         </a>
                         </div>
@@ -136,8 +137,8 @@
                             <a href="img/gallery/gallery-2.jpg" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
-                        <div class="gf-item large-small-height set-bg natural" data-setbg="img/gallery/gallery-3.jpg">
-                            <a href="img/gallery/gallery-3.jpg" class="gf-icon image-popup"><span
+                        <div class="gf-item large-small-height set-bg natural" data-setbg="img/lawwa-img/web-gallery/tryrty.jpg">
+                            <a href="img/lawwa-img/web-gallery/tryrty.jpg" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
                         <div class="gf-item small-height set-bg wedding" data-setbg="img/gallery/gallery-4.jpg">
