--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -106,17 +106,21 @@
     </header>
     <!-- Header End -->
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  data-interval="3000">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  data-interval="3500">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> 1 </li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active" style="max-height: 550px">
-            <img class="d-block w-100" src="img/lawwa-img/lawwa_new_banner.jpg" alt="First slide" style="max-height: 550px">
+            <!-- <img class="d-block w-100" src="img/lawwa-img/lawwa_new_banner.jpg" alt="First slide" style="max-height: 550px"> -->
+            <img class="d-block w-100" src="img/lawwa-img/newbanner1LADH.jpg" alt="First slide">
             <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-                <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6">
+                <!-- <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6"> -->
+                  <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
                         <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
                           <div class="" style="max-width: 25px; max-height: 25px;">
@@ -140,18 +144,14 @@
                         </a>
                       </div>
                 </div>
-                <!-- <div class="col-6 col-lg-6 col-md-6" style="float: right;">
-                    <div class="custom-social">
-                        <h3>REGISTER BANNERESQUE BUTTON</h3>
-                      </div>
-                </div> -->
               </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/lawwa-img/banner_alt2.jpeg" alt="Second slide" style="max-height: 550px">
+            <!-- <img class="d-block w-100" src="img/lawwa-img/banner_alt2.jpeg" alt="Second slide" style="max-height: 550px"> -->
+            <img class="d-block w-100" src="img/lawwa-img/newbanner3LADH.JPG" alt="Second slide">
             <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-                <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6">
-                    <div class="custom-social">
+              <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                <div class="custom-social">
                       <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
                         <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/facebook logo.png" />
@@ -174,15 +174,11 @@
                         </a>
                       </div>
                 </div>
-                <!-- <div class="col-6 col-lg-6 col-md-6" style="float: right;">
-                    <div class="custom-social">
-                        <h3>REGISTER BANNERESQUE BUTTON</h3>
-                      </div>
-                </div> -->
               </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/lawwa-img/LATH3.JPG" alt="Third slide" style="max-height: 550px">
+            <!-- <img class="d-block w-100" src="img/lawwa-img/LATH3.JPG" alt="Third slide" style="max-height: 550px;"> -->
+            <img class="d-block w-100" src="img/lawwa-img/newbanner2LADH.jpg" alt="Second slide">
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
@@ -208,11 +204,64 @@
                         </a>
                       </div>
                 </div>
-                <!-- <div class="col-6 col-lg-6 col-md-6" style="float: right;">
+              </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/lawwa-img/BANNER4NEW.jpg " alt="Fourth slide" style="max-height: inherit;">
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
-                        <h3>REGISTER BANNERESQUE BUTTON</h3>
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
                       </div>
-                </div> -->
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/lawwa-img/bannerweb.jpg " alt="Fifth slide" style="max-height: 550px">
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
               </div>
           </div>
         </div>
@@ -235,9 +284,9 @@
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="section-title">
-              <h2 class="gradient-text" lang="en">Our Services</h2>
-              <h2 class="gradient-text" lang="bm">Services alt</h2>
-              <p lang="en">
+              <h2 class="gradient-text" lang="en">Services</h2>
+              <h2 class="gradient-text" lang="bm">Services</h2>
+              <!-- <p lang="en">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do<br />
                 eiusmod tempor incididunt ut labore et dolore.
@@ -246,10 +295,10 @@
                 alternative text
                 <br />
                 alternative text
-              </p>
+              </p> -->
             </div>
           </div>
-          <div class="col-lg-6 col-md-6">
+          <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="right-btn">
               <a href="./services.html" class="cust-lawwa-gradient">View all</a>
             </div>
@@ -258,52 +307,44 @@
         <div class="categories-slider owl-carousel">
           <div class="cs-item">
             <a href="./facial.html">
-            <div
-              class="cs-pic set-bg"
-              data-setbg="img/lawwa-img/facial-alt.jpg"
-            ></div>
+            <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/facial-alt.jpg"> -->
+              <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/facial-new.jpg"></div>
+              <div class="cs-text">
+                <h4 class="lawwa-blue-text">Facial</h4>
+            </div>
+            </a>
+          </div>
+          <div class="cs-item">
+            <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/massage.jpg"></div> -->
+            <a href="./massage.html">
+            <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/massage.jpg"></div>
+              <div class="cs-text">
+              <h4 class="lawwa-blue-text">Massage</h4>
+            </div>
+            </a>
+          </div>
+          <div class="cs-item">
+            <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/makeup-alt.jpg"></div> -->
+            <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/makeupedit.jpg"></div>
             <div class="cs-text">
-                <h4>Facial</h4>
-              </a>
+              <h4 class="lawwa-blue-text">Make Up</h4>
             </div>
           </div>
           <div class="cs-item">
-            <div
-              class="cs-pic set-bg"
-              data-setbg="img/lawwa-img/massage.jpg"
-            ></div>
+            <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/treatment.jpg"></div> -->
+            <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/treatment/treatmenweb.jpg"></div>
             <div class="cs-text">
-              <h4>Massage</h4>
+              <h4 class="lawwa-blue-text">Treatment</h4>
             </div>
           </div>
           <div class="cs-item">
-            <div
-              class="cs-pic set-bg"
-              data-setbg="img/lawwa-img/makeup-alt.jpg"
-            ></div>
+            <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/confinement-alt.jpg"></div> -->
+            <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/confinement.jpg"></div>
             <div class="cs-text">
-              <h4>Make Up</h4>
+              <h4 class="lawwa-blue-text">Confinement Care</h4>
             </div>
           </div>
-          <div class="cs-item">
-            <div
-              class="cs-pic set-bg"
-              data-setbg="img/lawwa-img/treatment.jpg"
-            ></div>
-            <div class="cs-text">
-              <h4>Treatment</h4>
-            </div>
-          </div>
-          <div class="cs-item">
-            <div
-              class="cs-pic set-bg"
-              data-setbg="img/lawwa-img/confinement-alt.jpg"
-            ></div>
-            <div class="cs-text">
-              <h4>Confinement Care</h4>
-            </div>
-          </div>
-          <div class="cs-item">
+          <!-- <div class="cs-item">
             <div
               class="cs-pic set-bg"
               data-setbg="img/lawwa-img/add-on.jpeg"
@@ -311,7 +352,7 @@
             <div class="cs-text">
               <h4>Add-Ons</h4>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -327,11 +368,12 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="section-title">
-              <h2 class="gradient-text">Our Membership Program</h2>
+              <h2 class="gradient-text">Membership Program</h2>
               <p>
                 Becoming A Member Of The Lawwa.Asia Program Rewards You With
                 Exclusive Treats You Cant Get Anywhere Else!
               </p>
+              <p>All at your fingertips! A click away and at the comfort of your home!</p>
               <p>
                 <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="cust-lawwa-gradient">SIGN UP NOW!</a>
               </p>
@@ -341,26 +383,12 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/lawwa-img/product2.jpg" alt="" />
-              <h3 style="color: rgba(42,56,143,1);">Products</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
-                ultrices gravida.
-              </p>
-              <a href="./services.html" class="cust-lawwa-gradient">Browse Catalog</a>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
-            <div class="services-item">
               <img src="img/lawwa-img/confinement.jpg" alt="" />
               <a href="./services.html">
                 <h3 style="color: rgba(42,56,143,1);">Services</h3>
               </a>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
-                ultrices gravida.
+                Experience our wide range of beauty and health services by our well trained PBTs abiding by our strict COVID-19 standard operating procedures. It’s not just about the experience, it’s the beauty that lies within !
               </p>
               <a href="./services.html" class="cust-lawwa-gradient">Explore Services</a>
             </div>
@@ -368,13 +396,21 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
               <img src="img/lawwa-img/massage.jpg" alt="" />
-              <h3 class="lawwa-blue" style="color: rgba(42,56,143,1);">Your PBT</h3>
+              <h3 class="lawwa-blue" style="color: rgba(42,56,143,1);">Our PBT</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
-                ultrices gravida.
+                Our Personal Beauty Therapist are 1 of the best therapist. They are groomed and certified. If you are interested feel free to sign up as our Beauty Therapist. Be part of Lawwa.Asia now !
               </p>
               <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank" class="cust-lawwa-gradient">JOIN NOW</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-item">
+              <img src="img/lawwa-img/commercial-approved/confinementproduct.jpg" alt="" />
+              <h3 style="color: rgba(42,56,143,1);">Products</h3>
+              <p>
+                Our products are formulated using natural resources and certified halal to ensure the quality and results of its usage that give satisfaction to consumers according to their needs. Exclusively for member !
+              </p>
+              <a href="./services.html" class="cust-lawwa-gradient">Browse Catalog</a>
             </div>
           </div>
         </div>
