--- a/lawwa-web-revised/massage.html
+++ b/lawwa-web-revised/massage.html
@@ -60,9 +60,9 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Products & Services</a></li>
+                <li class="active"><a href="./services.html">Products & Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
-                <li class="active"><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
                     <ul class="dropdown">
                         <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
                         <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
@@ -102,148 +102,147 @@
         </div>
         </div>
       </div>
-    </header>
+    </header> 
     <!-- Header End -->
 
-    <!-- Portfolio Hero Section Begin -->
-    <!-- <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+      <br>
+      <section>
+        <div class="container-fluid">
+          <div class="col-lg-12 p-0 ">
+            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+          </div>
+        </div>
+      </section>
+      <br>
+
+    <!-- Services Section Begin -->
+    <br>
+    <section class="services-section services-normal spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="ph-text">
-                        <h2>Lawwa Asia</h2>
+                  <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
+                    <h3>Massage Services</h3>
+                        <!-- <p>Lorem .</p> -->
+                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find 1 that  suit your mood now !</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3 class="lawwa-blue-text">Massage Type 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3 class="lawwa-blue-text">Massage Type 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3 class="lawwa-blue-text">Massage Type 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <br><br> -->
-    <!-- Portfolio Hero Section End -->
+    <!-- Services Section End -->
 
-        <!-- Cta Section Begin -->
-        <!-- <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" style="display: block; margin-left: auto; margin-right: auto; ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="cta-text">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-        <!-- Cta Section End -->
-
-  <section class="cta-section spad set-bg w-100" data-setbg="img/lawwa-img/facial-alt.jpg" 
-    style="display: flex; height: 100%; max-height: 550px; margin-left: auto; margin-right: auto;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="cta-text">
-                            <h2>Courses</h2>
-                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore<br /> magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas.</p>
-                            <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="cust-lawwa-gradient">Join Today</a> -->
-                        </div>
-                    </div> 
-                </div>
-            </div>
-        </section>
-
-        <br>
-    <section class="about section">
+    <!-- Services Option Section Begin -->
+    <section class="services-option">
         <div class="container">
             <div class="row">
-                <div class="col-md-7 col-sm-12">
-                    <div class="block">
-                        <div class="section-title">
-                            <h3>Basic Courses</h3>
-                            <p>random text</p>
-                        </div>
-                        <p>Target audience/Goal of the course? eg Beginner level introduction for inexperienced candidates</p>
-                        <p>Duration of the course?</p>
-                        <p>Platform to carry it out? Online, In seremban, KL</p>
-                        <p>theory/practical?</p>
-                        <p>example / snippet of course outline/syllabus?</p>
-                    </div>
-                </div><!-- .col-md-7 close -->
-                <div class="col-md-5 col-sm-12">
-                    <div class="block">
-                        <img src="img/lawwa-img/massage-alt.jpg" alt="Img">
-                    </div>
-                </div><!-- .col-md-5 close -->
-            </div>
-        </div>
-    </section>
-
-
-    <!-- <br>
-    <section>
-      <div class="container-fluid">
-        <div class="col-lg-12 p-0">
-          <div class="col-lg-6 col-6 col-md-6 col-sm-6 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
-            <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
-              <i class="fa fa-play"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br> -->
-
-
-    <br><br>
-    <section class="about section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 col-sm-12">
-                    <div class="block">
-                        <img src="img/lawwa-img/treatment-alt.jpg" alt="Img">
+                <div class="col-lg-12 text-center">
+                    <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
+                        <h2 class="gradient-text">Related Products</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                            incididunt ut labore et dolore.</p>
                     </div>
                 </div>
-
-                <!-- <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
-                  <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
-                    <i class="fa fa-play"></i>
-                  </a>
-                </div> -->
-
-                <div class="col-md-7 col-sm-12">
-                    <div class="block">
-                        <div class="section-title">
-                            <h3>Extended Courses</h3>
-                        </div>
-                        <p>Extended course outline </p>
-                    </div>
-                </div><!-- .col-md-7 close -->
             </div>
-        </div>
-    </section>
-
-    <br><br>
-
-    <section class="about section">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-7 col-sm-12">
-                  <div class="block">
-                      <div class="section-title">
-                          <h3>Other Courses</h3>
-                          <p>random text</p>
+            <div class="row">
+                <div class="col-lg-12">
+                  <div class="so-item">
+                    <div class="so-title">
+                      <div class="so-number">01</div>
+                      <h5>Product</h5>
+                      <br>
+                      <div class="row">
+                        <div class="col-5 col-sm-2 col-md-2" style="padding-left: 0;">
+                          <img src="img/lawwa-img/product1.jpg" alt="">
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+                      <div class="col-7 col-sm-10 col-md-10">
+                        <p>Lorem ipsum dolor sit   amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      </div>
+                      </div>
+                    </div>
                   </div>
-              </div><!-- .col-md-7 close -->
-              <div class="col-md-5 col-sm-12">
-                  <div class="block">
-                      <img src="img/lawwa-img/makeup-alt.jpg" alt="Img">
-                  </div>
-              </div><!-- .col-md-5 close -->
-          </div>
-      </div>
-  </section>
 
-  <br><br>
+                  <div class="so-item">
+                    <div class="so-title">
+                      <div class="so-number">02</div>
+                      <h5>Product</h5>
+                      <br>
+                      <div class="row">
+                        <div class="col-5 col-sm-4 col-md-2" style="padding-left: 0;">
+                          <img src="img/lawwa-img/product1.jpg" alt="">
+                      </div>
+                      <div class="col-7 col-sm-6 col-md-10">
+                        <p>Lorem ipsum dolor sit   amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                    <!-- <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">03</div>
+                            <h5>Product</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div> -->
+                </div>
+
+
+
+            </div>
+        </div>
+    </section>
+    <!-- Services Option Section End -->
+
+        <!-- Portfolio Hero Section Begin -->
+        <!-- class="ad-banner set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" -->
+        <section class="ad-banner">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12" >
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                          <h2>Join Today For Full Access To Our Services</h2>
+                          <p>
+                            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
+                            class="cust-lawwa-gradient">
+                            JOIN NOW
+                          </a>
+                          </p>
+                          
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <br><br>
 
  <!-- Footer Section Begin -->
  <footer class="footer-section">
