--- a/lawwa-web-revised/membership.html
+++ b/lawwa-web-revised/membership.html
@@ -134,9 +134,11 @@
           <div class="col-lg-12">
               <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                   <h3>Membership Benefits</h3>
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
-                      incididunt ut labore et dolore.</span>
-              </div>
+                  <p>Becoming a member of the Lawwa.Asia Program rewards you with exclusive treats you cannot get anywhere else ! Blossom into a new you! Its always about care, security and exclusive with Lawwa.Asia.</p>
+                  <p>Malaysia’s first pre-Booking Mobile Personal Beauty Therapist application. Lawwa.Asia Personal Beauty Therapist (PBT) is a trained and qualified beauty treatment practitioner and is legally registered with the Lawwa.Asia academy that will serve and assist customers on the appropriate treatment to obtain the best results.
+                    The Wow is in the results. Our concerned is mainly on quality, so the recruitment of these Therapist will go through  compulsory stages which are Sesi Taklimat & Temuduga (STT), Kursus Latihan Asas Usahawan Kecantikan Bergerak Norma Baharu (KLAUKBNB) and Kelas Lanjutan Modul in Lawwa.Asia Beauty Digitalisation Academy from time to time.
+                    </p>
+                </div>
           </div>
         </div>
 
